--- a/beehiveKaris/css/style.css
+++ b/beehiveKaris/css/style.css
@@ -10,6 +10,15 @@
     background-color: #1a2829;
 }
 
+.headerTitle{
+    color: #fff;
+    padding: 15px 0px 0px 10px;
+}
+
+.TitleCol{
+    margin: 5px 5px 0px 0px;
+    background-color: #1a2829;
+}
 
 .appComponent{
     display: flex;
@@ -62,6 +71,17 @@
 
 .BeesComponent::-webkit-scrollbar{
     display: none;
+}
+
+.BeeTitleCol{
+    margin: 5px 5px 0px 5px;
+    background-color: #1a2829;
+}
+
+.h2{
+    color: #fff;
+    font-size: 20px;
+    padding-left: 5px;
 }
 
 .beeComponent {
@@ -154,7 +174,7 @@
     background-color: white;
     z-index: 2;
     width: 50%;
-    height: 100vh;
+    height: 92vh;
     float: left;
     overflow: scroll;
     overflow-x: hidden;
@@ -162,6 +182,29 @@
 
 .postsComponent::-webkit-scrollbar{
     display: none;
+}
+
+.PostTitleCol{
+    margin: 5px 5px 0px 0px;
+    padding: 1px 0px 5px 0px;
+    background-color: #1a2829;
+}
+
+.leftcol{
+    float: left;
+    width: 88%;
+}
+ 
+.rightCol{
+    width: 50%;
+    float: right;
+}
+ 
+.addPostBtn{
+    background-color: transparent;
+    border: 1px solid #62717b;
+    padding: 0px 10px 0px 10px;
+    border-radius: 10px;
 }
 
 .postComponent {
@@ -261,12 +304,11 @@ textarea:focus {
     color: white;
 }
 
-
-
+/* --------------------------------------Album-------------------------------------- */
 
 .albumComponent {
     width: 40%;
-    height: 100vh;
+    height: 92vh;
     float: left;
     overflow: scroll;
     display: flex;
@@ -278,6 +320,12 @@ textarea:focus {
 
 .albumComponent::-webkit-scrollbar{
     display: none;
+}
+
+.AlbumTitleCol{
+    margin: 5px 5px 0px 0px;
+    width: 100%;
+    background-color: #1a2829;
 }
 
 .backBtn {
@@ -299,15 +347,15 @@ textarea:focus {
   }
   
   .thumbnail {
-    width: 90%;
+    width: 93.5%;
     height: auto;
     margin: 0px 10px 0px 10px;
   }
   
   .photo {
     background-color: white;
-    width: 50%;
-    height: auto;
+    width: 30%;
+    height: 60vh;
   }
   
 .photoComponent {
@@ -323,20 +371,17 @@ textarea:focus {
 }
   
   .photoComponent-okBtn {
-    width: 50%;
+    width: 30%;
     height: 40px;
     margin-top: 10px;
     background-color: palevioletred;
   }
 
-
-
-
-
+/* --------------------------------------To Do-------------------------------------- */
   
 .todosComponent {
     width: 60%;
-    height: 100vh;
+    height: 92vh;
     float: left;
     overflow: scroll;
     overflow-x: hidden;
@@ -345,7 +390,6 @@ textarea:focus {
 .todosComponent::-webkit-scrollbar{
     display: none;
 }
-
 
 .todoComponent {
     background-color: lightsteelblue;
@@ -358,13 +402,23 @@ textarea:focus {
     margin-left: 10px;
 }
 
+.ToDoTitleCol{
+    margin: 5px 5px 0px 0px;
+    padding: 1px 0px 5px 0px;
+    background-color: #1a2829;
+}
+
+.addToDoBtn{
+    background-color: transparent;
+    border: 1px solid #62717b;
+    padding: 0px 10px 0px 10px;
+    border-radius: 10px;
+}
+
 .todoCompleted {
     background-color: #3b4849;
     color: lightgray;
 }
-
-
-
 
 /*querys*/
 
